--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "alpinejs": "^3.15.1",
     "gsap": "^3.13.0",
+    "memu-js": "^0.2.1",
     "splitting": "^1.1.0",
     "swiper": "^12.0.3"
   }
