--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "alpinejs": "^3.15.1",
     "gsap": "^3.13.0",
     "memu-js": "^0.2.1",
+    "mmenu-js": "^8.0.1",
     "scrollmagic": "^2.0.8",
     "scrollmagic-plugin-gsap": "^1.0.4",
     "splitting": "^1.1.0",
