--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^7.1.10"
   },
   "dependencies": {
+    "@alpinejs/collapse": "^3.15.4",
     "@fancyapps/ui": "^6.1.7",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/typography": "^0.5.10",
