--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,12 @@ wp-config.php
 # Note: If you wish to whitelist themes,
 # uncomment the next line
 #/wp-content/themes
+# Build output
+dist/
+
+# Dependencies
+node_modules/
+
+# Vite cache
+.vite/
+.vite_running
